[UPDATE] example, hidden test case
