# backend/docs/swagger.json
@@ -99,6 +99,53 @@
                 }
             }
         },
+        "/codingInterview.createQuestion": {
+            "post": {
+                "description": "Create a new coding interview question",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "codingInterview"
+                ],
+                "summary": "Create a new coding interview question",
+                "operationId": "CreateQuestion",
+                "parameters": [
+                    {
+                        "description": "Request body containing the new question details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CodingInterviewCreateQuestionQuery"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response with the created question",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Response-domains_CodingQuestion"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/codingInterview.generateCompileToken": {
             "post": {
                 "description": "Generate compile token for a coding interview",
@@ -597,6 +644,17 @@
         }
     },
     "definitions": {
+        "CodingInterviewCreateQuestionQuery": {
+            "type": "object",
+            "required": [
+                "body"
+            ],
+            "properties": {
+                "body": {
+                    "$ref": "#/definitions/domains.CreateCodingQuestionRequest"
+                }
+            }
+        },
         "CodingInterviewGenerateCompileTokenQuery": {
             "type": "object",
             "required": [
@@ -955,9 +1013,6 @@
                 "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
-                "expectedOutput": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -966,6 +1021,9 @@
                 },
                 "isHidden": {
                     "type": "boolean"
+                },
+                "output": {
+                    "type": "string"
                 },
                 "question": {
                     "$ref": "#/definitions/domains.CodingQuestion"
@@ -1025,6 +1083,38 @@
                     "type": "string"
                 },
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "domains.CreateCodingQuestionRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "difficulty": {
+                    "type": "string"
+                },
+                "examples": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.CodingQuestionExample"
+                    }
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "test_cases": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.CodingQuestionTestCase"
+                    }
+                },
+                "title": {
                     "type": "string"
                 }
             }
@@ -1190,6 +1280,23 @@
                 },
                 "data": {
                     "$ref": "#/definitions/VideoInterviewQuestionResponse"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.Response-domains_CodingQuestion": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/domains.CodingQuestion"
                 },
                 "message": {
                     "type": "string"
