# backend/internal/handlers/codingInterview_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"csgit.sit.kmutt.ac.th/interv/interv-platform/internal/domains"
 	"csgit.sit.kmutt.ac.th/interv/interv-platform/internal/services"
 	"github.com/gofiber/fiber/v2"
 )
@@ -84,4 +85,39 @@ func (co CodingInterviewHandler) GetQuestions(c *fiber.Ctx) error {
 	}
 
 	return Ok(c, questions)
+}
+
+// @Summary Create a new coding interview question
+// @Description Create a new coding interview question
+// @Tags codingInterview
+// @ID CreateQuestion
+// @Accept json
+// @Produce json
+// @Param body body CodingInterviewCreateQuestionQuery true "Request body containing the new question details"
+// @Success 200 {object} Response[domains.CodingQuestion] "Successful response with the created question"
+// @Failure 400 {object} ErrResponse
+// @Failure 500 {object} ErrResponse
+// @Router /codingInterview.createQuestion [post]
+func (co CodingInterviewHandler) CreateQuestion(c *fiber.Ctx) error {
+	var req CodingInterviewCreateQuestionQuery
+	if err := c.BodyParser(&req); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+
+	question, err := co.codingInterviewService.CreateCodingQuestion(
+		domains.CodingQuestion{
+			Title:       req.Body.Title,
+			Description: req.Body.Description,
+			Difficulty:  req.Body.Difficulty,
+			Examples:    req.Body.Examples,
+			TestCases:   req.Body.TestCases,
+			Tags:        req.Body.Tags,
+		},
+	)
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
+	}
+
+	return Ok(c, question)
+
 }
